fix detection offset -1

--- a/src/configs/algorithm.yaml
+++ b/src/configs/algorithm.yaml
@@ -55,6 +55,7 @@ detection:
   threshold: 60.0  # Threshold
   batch_size: 1000  # Batch size for multiview processing
   reset: true  # Reset martingales after detection
+  reset_on_traditional: false  # Whether to reset horizon martingales when traditional martingale detects a change
   max_window: null  # Maximum window size (null for adaptive)
   prediction_horizon: 5  # Number of steps to predict ahead
   
